--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -39,7 +39,7 @@
         android:text="Change Settings"
         android:textSize="30sp"
         android:textColor="@color/beige"
-        android:textAppearance="@style/custom_font" />
+        android:textAppearance="@style/default_font" />
 
 
 </RelativeLayout>
