--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -5,17 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background">
 
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/lavGhost"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        app:lottie_asyncUpdates="enabled"-->
-<!--        app:lottie_cacheComposition="true"-->
-<!--        app:lottie_rawRes="@raw/ghost"-->
-<!--        app:lottie_autoPlay="true"-->
-<!--        app:lottie_loop="true"-->
-<!--        android:alpha="0.3"/>-->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/background"
+        android:scaleType="centerCrop"
+        app:lottie_asyncUpdates="enabled"
+        app:lottie_cacheComposition="true"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lavCoinSplash"
@@ -24,7 +24,7 @@
         android:layout_centerInParent="true"
         app:lottie_rawRes="@raw/coinsplash"
         app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true"/>
+        app:lottie_cacheComposition="true" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lavCoinFlip"
@@ -79,26 +79,28 @@
 
 
     <TextView
+        android:id="@+id/tvPlayBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:text="@string/title_name"
         android:textSize="55sp"
+        android:letterSpacing="0.2"
         android:textColor="@color/beige"
-        android:textAppearance="@style/custom_font"
+        android:textAppearance="@style/funky_font"
         android:onClick="handlePlayBox" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="30dp"
-        android:text="@string/creator"
+        android:layout_alignStart="@+id/tvPlayBox"
+        android:layout_marginTop="55dp"
+        android:text=" FAHAD's"
         android:textSize="20sp"
-        android:textColor="@color/beige"
-        android:textAppearance="@style/custom_font" />
+        android:textColor="@color/yellow"
+        android:textAppearance="@style/spooky_font" />
+
 
     <View
         android:id="@+id/shadowV"
@@ -119,7 +121,7 @@
             android:layout_centerHorizontal="true"
             android:text="Confirm exit?"
             android:textSize="30sp"
-            android:textAppearance="@style/custom_font"
+            android:textAppearance="@style/default_font"
             android:textColor="@color/beige" />
 
         <LinearLayout
@@ -138,7 +140,7 @@
                 android:text="NO"
                 android:textSize="25sp"
                 android:textColor="@color/beige"
-                android:textAppearance="@style/custom_font"
+                android:textAppearance="@style/default_font"
                 android:onClick="handleExitButtons" />
 
             <Button
@@ -151,7 +153,7 @@
                 android:text="YES"
                 android:textSize="25sp"
                 android:textColor="@color/beige"
-                android:textAppearance="@style/custom_font"
+                android:textAppearance="@style/default_font"
                 android:onClick="handleExitButtons" />
 
         </LinearLayout>
