--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,17 @@
 <resources>
 
-    <style name="custom_font">
+    <style name="default_font">
         <item name="android:fontFamily">@font/font</item>
     </style>
 
     <style name="funky_font">
         <item name="android:fontFamily">@font/funkyfont</item>
     </style>
+
+    <style name="spooky_font">
+        <item name="android:fontFamily">@font/spooky</item>
+    </style>
+
 
     <style name="KeyboardTextView">
         <item name="android:background">@drawable/keyboard_keys_background</item>
@@ -16,7 +21,7 @@
         <item name="android:layout_marginStart">5dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textAppearance">@style/custom_font</item>
+        <item name="android:textAppearance">@style/default_font</item>
         <item name="android:gravity">center</item>
         <item name="android:clickable">true</item>
         <item name="android:onClick">keyboardClicked</item>
@@ -27,7 +32,7 @@
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textAppearance">@style/custom_font</item>
+        <item name="android:textAppearance">@style/default_font</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/hint</item>
         <item name="android:gravity">center</item>
@@ -66,7 +71,7 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/beige</item>
-        <item name="android:textAppearance">@style/custom_font</item>
+        <item name="android:textAppearance">@style/default_font</item>
     </style>
 
     <style name="BoardButton">
@@ -76,7 +81,7 @@
         <item name="android:layout_margin">10dp</item>
         <item name="android:textSize">50sp</item>
         <item name="android:textColor">@color/beige</item>
-        <item name="android:textAppearance">@style/custom_font</item>
+        <item name="android:textAppearance">@style/default_font</item>
     </style>
 
     <style name="ShadowLayout">
